# elderspy

./: .gitignore  README.md  docker-compose.yml  pom.xml
backend/: docker-compose.yml  pom.xml
backend/endpoints/: telemetry-requests.http
backend/grafana-provisioning/dashboards/: telemetry-dashboard.json
backend/grafana-provisioning/datasources/: influxdb.yml
backend/kubernetes/: README.md
backend/kubernetes/config-maps/: influxdb-configmap.yaml  rabbitmq-configmap.yaml
backend/kubernetes/deployments/: influxdb-deployment.yaml  rabbitmq-deployment.yaml  telemetry-ingestion-deployment.yaml
backend/kubernetes/hpa/: telemetry-ingestion-hpa.yaml
backend/kubernetes/namespace/: namespace.yaml
backend/kubernetes/secrets/: influxdb-secret.yaml  rabbitmq-secret.yaml
backend/kubernetes/services/: influxdb-service.yaml  rabbitmq-service.yaml  telemetry-ingestion-service.yaml
backend/services/: docker-compose.yml  pom.xml
backend/services/alerting-service/: README.md  pom.xml
gateway/: CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yaml  mqtt_client  mqtt_test.cpp  nanomq.conf  start.sh
gateway/data/: sqlite_rule_all.db  telemetry.db
gateway/include/: IotMqttClient.h  alertManager.h  backend_mqtt_client.h  global.h  nanomq_client.h  sensors_config.h  sensors_data_forwarder.h  sensors_data_storer.h  tcp_handler.h  telemetry_db.h
gateway/include/alert/: alert_manager.h
gateway/include/config/: global.h  sensors_config.h
gateway/include/mqtt_clients/: backend_mqtt_client.h  gateway_mqtt_client.h  mqtt_client.h  mqtt_client_factory.h
gateway/include/structs/: telemetry_data.h
gateway/src/: IotMqttClient.cpp  alertManager.cpp  backend_mqtt_client.cpp  main.cpp  mqtt_client.cpp  nanomq_client.cpp  sensors_config.cpp  sensors_data_forwarder.cpp  sensors_data_storer.cpp  tcp_handler.cpp  telemetry_db.cpp
gateway/src/alert/: alert_manager.cpp
gateway/src/config/: sensors_config.cpp
gateway/src/mqtt_clients/: backend_mqtt_client.cpp  gateway_mqtt_client.cpp  mqtt_client.cpp  mqtt_client_factory.cpp
grafana-provisioning/dashboards/: telemetry-dashboard.json  telemetry-dashboard.yml
kafka-elderspy/: Dockerfile  docker-compose.yml  pom.xml
kafka-elderspy/kafka-common/: pom.xml
kafka-elderspy/kafka-consumer/: pom.xml
kafka-elderspy/kafka-producer/: pom.xml
sensors/: Dockerfile  dockerfile  flows.json
(+85 files in other folders)
